--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <xmp>
 # Markdown text goes in here
+Introduction to subject here.
+
+[TOC]
 
 ## Chapter 1
 
@@ -31,5 +34,5 @@ public class Test{
 |test1|test1|
 
 </xmp>
-<script src="bundle.js"></script>
+<script src="rmlmarked.autoload.min.js"></script>
  </html>
