Remove css load in js

--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@ public class Test{
 |test1|test1|
 
 </xmp>
+
+<link rel="stylesheet" type="text/css" href="old/default.min.css">
 <script src="rmlmarked.autoload.min.js"></script>
  </html>
