using pure-table css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<bata>
+<xmp>
 # Markdown text goes in here
 Introduction to subject here.
 
@@ -33,7 +33,7 @@ public class Test{
 |teste|teste|
 |test1|test1|
 
-</bata>
+</xmp>
 
 <link rel="stylesheet" type="text/css" href="old/default.min.css">
 <script src="rmlmarked.autoload.min.js"></script>
