--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volup
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum.
 
+![test](http://test.jpg)
+
 ```java
 public class Test{
 	public void main(){
@@ -34,6 +36,17 @@ public class Test{
 |test1|test1|
 
 </xmp>
+
+<pre class="markdowncodebox">
+<code>
+public class Test{
+	
+}
+</code>
+</pre>
+
+<style>
+</style>
 
 <link rel="stylesheet" type="text/css" href="old/default.min.css">
 <script src="rmlmarked.autoload.min.js"></script>
