--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-<xmp>
+<pre>
+# Chapter 1
+## Chapter 2
+### Chapter 3
+#### Chapter 4
+##### Chapter 5
+
 # Markdown text goes in here
 Introduction to subject here.
-
-[TOC]
-
-## Chapter 1
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
 et dolore magna aliqua. 
@@ -18,7 +20,7 @@ aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in volup
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 culpa qui officia deserunt mollit anim id est laborum.
 
-![test](http://test.jpg)
+
 
 ```java
 public class Test{
@@ -35,14 +37,6 @@ public class Test{
 |teste|teste|
 |test1|test1|
 
-</xmp>
-
-<pre class="markdowncodebox">
-<code>
-public class Test{
-	
-}
-</code>
 </pre>
 
 <style>
