--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <pre>
+[TOC]
 ##### Chapter 5
+#### Chapter 4
+### Chapter 3
+
 # Chapter 1
 ## Chapter 2
-### Chapter 3
-#### Chapter 4
+
 
 > This is a blockquote with two paragraphs. Lorem ipsum dolor sit amet,
 > consectetuer adipiscing elit. Aliquam hendrerit mi posuere lectus.
@@ -39,7 +42,7 @@ public class Test{
 
 ```
 
-|teste|teste|
+|teste|teste|r
 |-----|-----|
 |teste|teste|
 |test1|test1|
